[gd_scene load_steps=80 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://art/player/dashing claw/dash_claw1.png" type="Texture" id=2]
[ext_resource path="res://art/player/dashing stick/dash_stick2.png" type="Texture" id=3]
[ext_resource path="res://art/player/attack stick/attack_stick1.png" type="Texture" id=4]
[ext_resource path="res://art/player/attack stick/attack_stick2.png" type="Texture" id=5]
[ext_resource path="res://art/player/attack stick/attack_stick4.png" type="Texture" id=6]
[ext_resource path="res://art/player/attack stick/attack_stick5.png" type="Texture" id=7]
[ext_resource path="res://art/player/dashing/dash1.png" type="Texture" id=8]
[ext_resource path="res://art/player/dashing/dash2.png" type="Texture" id=9]
[ext_resource path="res://art/player/attack claw/attack_claw3.png" type="Texture" id=10]
[ext_resource path="res://art/player/attack stick/attack_stick3.png" type="Texture" id=11]
[ext_resource path="res://art/player/attack claw/attack_claw1.png" type="Texture" id=12]
[ext_resource path="res://art/player/attack claw/attack_claw2.png" type="Texture" id=13]
[ext_resource path="res://art/player/attack claw/attack_claw4.png" type="Texture" id=14]
[ext_resource path="res://art/player/dashing/dash8.png" type="Texture" id=15]
[ext_resource path="res://art/player/dashing/dash7.png" type="Texture" id=16]
[ext_resource path="res://art/player/dashing/dash4.png" type="Texture" id=17]
[ext_resource path="res://art/player/dashing/dash6.png" type="Texture" id=18]
[ext_resource path="res://art/player/dashing/dash5.png" type="Texture" id=19]
[ext_resource path="res://art/player/dashing/dash3.png" type="Texture" id=20]
[ext_resource path="res://art/player/dashing stick/dash_stick6.png" type="Texture" id=21]
[ext_resource path="res://art/player/dashing stick/dash_stick7.png" type="Texture" id=22]
[ext_resource path="res://art/player/dashing claw/dash_claw6.png" type="Texture" id=23]
[ext_resource path="res://art/player/death/death1.png" type="Texture" id=24]
[ext_resource path="res://art/player/death/death2.png" type="Texture" id=25]
[ext_resource path="res://art/player/dashing claw/dash_claw3.png" type="Texture" id=26]
[ext_resource path="res://art/player/dashing stick/dash_stick3.png" type="Texture" id=27]
[ext_resource path="res://art/player/dashing claw/dash_claw8.png" type="Texture" id=28]
[ext_resource path="res://art/player/dashing claw/dash_claw5.png" type="Texture" id=29]
[ext_resource path="res://art/player/dashing stick/dash_stick4.png" type="Texture" id=30]
[ext_resource path="res://art/player/dashing stick/dash_stick1.png" type="Texture" id=31]
[ext_resource path="res://art/player/dashing stick/dash_stick8.png" type="Texture" id=32]
[ext_resource path="res://art/player/dashing claw/dash_claw7.png" type="Texture" id=33]
[ext_resource path="res://art/player/dashing claw/dash_claw2.png" type="Texture" id=34]
[ext_resource path="res://art/player/dashing claw/dash_claw4.png" type="Texture" id=35]
[ext_resource path="res://art/player/dashing stick/dash_stick5.png" type="Texture" id=36]
[ext_resource path="res://art/player/walking claw/walking_claw3.png" type="Texture" id=37]
[ext_resource path="res://art/player/walking/walking3.png" type="Texture" id=38]
[ext_resource path="res://art/player/walking claw/walking_claw2.png" type="Texture" id=39]
[ext_resource path="res://art/player/walking/walking2.png" type="Texture" id=40]
[ext_resource path="res://art/player/walking/walking1.png" type="Texture" id=41]
[ext_resource path="res://art/player/jumping stick/jumping_stick3.png" type="Texture" id=42]
[ext_resource path="res://art/player/walking stick/walking_stick3.png" type="Texture" id=43]
[ext_resource path="res://art/player/jumping stick/jumping_stick4.png" type="Texture" id=44]
[ext_resource path="res://art/player/walking claw/walking_claw1.png" type="Texture" id=45]
[ext_resource path="res://art/player/jumping stick/jumping_stick2.png" type="Texture" id=46]
[ext_resource path="res://art/player/walking stick/walking_stick1.png" type="Texture" id=47]
[ext_resource path="res://art/player/jumping stick/jumping_stick5.png" type="Texture" id=48]
[ext_resource path="res://art/player/walking claw/walking_claw4.png" type="Texture" id=49]
[ext_resource path="res://art/player/walking stick/walking_stick2.png" type="Texture" id=50]
[ext_resource path="res://art/player/walking stick/walking_stick4.png" type="Texture" id=51]
[ext_resource path="res://art/player/walking/walking4.png" type="Texture" id=52]
[ext_resource path="res://art/player/idle_stick/standing_stick1.png" type="Texture" id=53]
[ext_resource path="res://art/player/jumping stick/jumping_stick1.png" type="Texture" id=54]
[ext_resource path="res://art/player/jumping/jumping3.png" type="Texture" id=55]
[ext_resource path="res://art/player/idle claw/standing_claw1.png" type="Texture" id=56]
[ext_resource path="res://art/player/jumping claw/jumping_claw4.png" type="Texture" id=57]
[ext_resource path="res://art/player/idle/standing2.png" type="Texture" id=58]
[ext_resource path="res://art/player/jumping/jumping2.png" type="Texture" id=59]
[ext_resource path="res://art/player/idle/standing1.png" type="Texture" id=60]
[ext_resource path="res://art/player/jumping/jumping4.png" type="Texture" id=61]
[ext_resource path="res://art/player/idle claw/standing_claw2.png" type="Texture" id=62]
[ext_resource path="res://art/player/jumping/jumping1.png" type="Texture" id=63]
[ext_resource path="res://art/player/jumping/jumping5.png" type="Texture" id=64]
[ext_resource path="res://art/player/jumping claw/jumping_claw2.png" type="Texture" id=65]
[ext_resource path="res://art/player/idle_stick/standing_stick2.png" type="Texture" id=66]
[ext_resource path="res://art/player/jumping claw/jumping_claw3.png" type="Texture" id=67]
[ext_resource path="res://art/player/jumping claw/jumping_claw1.png" type="Texture" id=68]
[ext_resource path="res://art/player/jumping claw/jumping_claw5.png" type="Texture" id=69]
[ext_resource path="res://sound/jump.mp3" type="AudioStream" id=70]
[ext_resource path="res://sound/step_0.mp3" type="AudioStream" id=71]
[ext_resource path="res://sound/step_1.mp3" type="AudioStream" id=72]
[ext_resource path="res://sound/hurt.mp3" type="AudioStream" id=73]
[ext_resource path="res://sound/hit_stick.mp3" type="AudioStream" id=74]
[ext_resource path="res://art/backgrounds/hell.png" type="Texture" id=75]
[ext_resource path="res://sound/dash.mp3" type="AudioStream" id=76]
[ext_resource path="res://sound/hit_claw.mp3" type="AudioStream" id=78]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 14 ) ],
"loop": false,
"name": "attack_claw",
"speed": 15.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "attack_stick",
"speed": 30.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": false,
"name": "dash",
"speed": 20.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 34 ), ExtResource( 26 ), ExtResource( 35 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 33 ), ExtResource( 28 ) ],
"loop": false,
"name": "dash_claw",
"speed": 20.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 3 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 36 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 32 ) ],
"loop": false,
"name": "dash_stick",
"speed": 20.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 25 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 58 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 62 ) ],
"loop": true,
"name": "idle_claw",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ), ExtResource( 66 ) ],
"loop": true,
"name": "idle_stick",
"speed": 5.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 59 ), ExtResource( 55 ), ExtResource( 61 ), ExtResource( 64 ) ],
"loop": false,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 65 ), ExtResource( 67 ), ExtResource( 57 ), ExtResource( 69 ) ],
"loop": false,
"name": "jump_claw",
"speed": 15.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 48 ) ],
"loop": false,
"name": "jump_stick",
"speed": 15.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 40 ), ExtResource( 38 ), ExtResource( 52 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 39 ), ExtResource( 37 ), ExtResource( 49 ) ],
"loop": true,
"name": "walk_claw",
"speed": 10.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 50 ), ExtResource( 43 ), ExtResource( 51 ) ],
"loop": true,
"name": "walk_stick",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 11.5 )

[node name="Player" type="KinematicBody2D" groups=["Attacker", "Player"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
maximum_hp = 5
recoil = 400

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 75 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="JumpStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 70 )

[node name="StepStreamPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 71 )

[node name="StepStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 72 )

[node name="WalkAudioTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="HurtStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 73 )

[node name="StickHitStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 74 )

[node name="ClawHitStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 78 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.21
one_shot = true

[node name="DashStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 76 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="WalkAudioTimer" to="." method="_on_WalkAudioTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
